--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,4 @@
 # Put application-specific config here (application name: client-config-app)
 some.property=app specific overridden value1
 some.new.property=new propertys
+some.other.property=app specific other value1
